saves/test/demo_full_20240802_193545/edgecapture/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp edgecapture_tb.v edgecapture.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
edgecapture_tb.v:141: $finish called at 280000 (1ps)

iverilog cmd 2 error:

